# CloudPilot-AI

./: README.md  docker-compose.yml
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  celerydb.sqlite  cloudpilot.db  docker-compose.yml  pyproject.toml  requirements.txt  test_db.db
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: ai.py  auth.py  billing.py  cloud.py  health.py  monitoring.py  optimization.py  router.py
backend/app/core/: config.py  logging.py
backend/app/database/: session.py
backend/app/dependencies/: auth.py
backend/app/domains/ai/prompts/: templates.py
backend/app/domains/ai/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  ollama.py  openai.py  openrouter.py
backend/app/exceptions/: base.py
backend/app/middleware/: exceptions.py  logging.py
backend/app/models/: ai.py  base.py  billing.py  cloud.py  monitoring.py  optimization.py  user.py
backend/app/repositories/: ai.py  base.py  billing.py  cloud.py  monitoring.py  optimization.py  user.py
backend/app/schemas/: ai.py  base.py  billing.py  cloud.py  monitoring.py  optimization.py  user.py
backend/app/services/: ai.py  auth.py  billing.py  cloud.py  monitoring.py  optimization.py
backend/app/utils/: security.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: ai.py  billing.py  discovery.py  metrics.py  optimization.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_billing.py  test_cloud.py  test_health.py  test_monitoring.py  test_optimization.py
docs/: api-contract.md  rbac.md  (+14 more)
(+67 files in other folders)
