[tool.poetry]
name = "cloudpilot-ai"
version = "1.0.0"
description = "AI-powered Multi-Cloud DevOps Copilot Backend"
authors = ["CloudPilot AI Team <info@cloudpilot.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
gunicorn = "^22.0.0"
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = "^5.0.6"
celery = {extras = ["redis"], version = "^5.4.0"}
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"  # Fixed version to ensure compatibility with passlib on Python 3.12
cryptography = "^42.0.8"
python-multipart = "^0.0.9"
msgpack = "^1.0.8"
structlog = "^24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
